# CC-rDeviceAgent

./: .dockerignore  .gitignore  CC-rDeviceAgent.toml  CC-rStationService.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  create-release.yml  release.yml
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: lib.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: chain.rs  command_policy.rs  error.rs  lib.rs  security.rs
crates/agent-protocols/: Cargo.toml
crates/agent-protocols/src/: lib.rs
crates/agent-store/: Cargo.toml
crates/agent-store/src/: lib.rs
crates/agent-telemetry/: Cargo.toml
crates/agent-telemetry/src/: lib.rs
crates/app-sdk/: Cargo.toml  README.md  build.rs
crates/app-sdk/proto/: app.proto
crates/app-sdk/src/: lib.rs
crates/pal-core/: Cargo.toml
crates/pal-core/src/: lib.rs
crates/pal-fallback/: Cargo.toml
crates/pal-fallback/src/: lib.rs
crates/pal-linux/: Cargo.toml
crates/pal-linux/src/: lib.rs
crates/pal-macos/: Cargo.toml
crates/pal-macos/src/: lib.rs
crates/pal-mock/: Cargo.toml
crates/pal-mock/src/: lib.rs
crates/pal-windows/: Cargo.toml
crates/pal-windows/src/: lib.rs
doc/: OTA-statemachine-detail-design-zh.md  PAL-arch-dd-zh.md  action_plan-v2.0-zh.md  action_plan-zh.md  arch-migrate-zh.md  architecture-zh.md  pal-usage-zh.md  phase-1-architecture-gap-matrix-zh.md  phase-1-migration-design-zh.md  phase-1-pal-extraction-list-zh.md  phase-1-state-inventory-zh.md  phase1-security-implementation-status.md  phase2-application-platform-status.md  requirements_v1.0-zh.md  review-v0.5-zh.md  review-v1.0-dev-plan-zh.md  state-store-usage-zh.md
doc/adr/: 0000-template.md  0001-double-sided-three-layer-architecture.md  0002-protocol-boundary.md  0003-platform-abstraction-layer.md  0004-state-store.md  0005-security-center.md  0006-audit-chain.md  0007-remove-embedded-desktop-agent.md  0007-upgrade-engine.md  0008-file-transfer-safety.md  0009-command-execution-policy.md  0010-observability.md  0011-capability-profile.md  0012-cross-platform-ci.md  0013-phase1-certificate-and-keystore-policy.md
doc/superpowers/plans/: 2026-05-26-chain-of-responsibility-middleware.md
doc/superpowers/specs/: 2026-05-26-chain-of-responsibility-middleware-design.md
examples/payload-hello/: Cargo.toml
examples/payload-hello/src/: main.rs
packaging/docker/: CC-rDeviceAgent.iot.toml.template  CC-rStationService.iot.toml.template  Dockerfile.iot-sim  iot-sim-entrypoint.sh
packaging/linux/: install.sh
packaging/linux/systemd/: cc-rdeviceagent-agent.service  cc-rdeviceagent.service
packaging/windows/: install.ps1  uninstall.ps1
proto/: app.proto  cc.proto
scripts/: prepare-release.sh  test-smoke.sh
src/: agent.rs  alert_engine.rs  app.rs  app_lifecycle.rs  app_platform.rs  batch.rs  batch_store.rs  config.rs  config_manager.rs  cpu_monitor.rs  data_router.rs  disk_monitor.rs  groups.rs  groups_store.rs  grpc.rs  health_evaluator.rs  lib.rs  main.rs  memory_monitor.rs  mqtt.rs  network_counters.rs  network_monitor.rs  platform.rs  plugins.rs  process_monitor.rs  script_engine.rs  script_store.rs  scripts.rs  state.rs  tags.rs  tags_store.rs  telemetry.rs  test_support.rs  upgrade_engine.rs
tests/: e2e_running_agent.rs
