[package]
name = "cc-rdeviceagent"
version = "0.1.0"
edition = "2024"
authors = ["cokkiy <cokkiy@outlook.com>"]
default-run = "cc-rdeviceagent"

[lib]
name = "cc_rdeviceagent"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
thiserror = "2.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std", "serde"] }
futures-util = "0.3.31"
hostname = "0.4.1"
netstat2 = "0.11.2"
pnet_datalink = "0.35.0"
prost = "0.14.1"
screenshots = "0.8.10"
serde = { version = "1.0.228", features = ["derive"] }
shlex = "2.0"
sysinfo = "0.39"
tokio = { version = "1.52", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.17"
toml = "0.9.8"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.23", features = ["v4", "serde"] }

# MQTT client for telemetry publishing
rumqttc = "0.25"
serde_json = "1.0"

# SQLite for script storage
rusqlite = { version = "0.39", features = ["bundled"] }
regex = "1.11"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["fs", "process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock"] }
