[package]
name = "cc-rdeviceagent"
version = "0.1.0"
edition = "2024"
authors = ["cokkiy <cokkiy@outlook.com>"]
default-run = "cc-rdeviceagent"

[workspace]
members = [
    ".",
    "crates/agent-core",
    "crates/agent-protocols",
    "crates/agent-telemetry",
    "crates/agent-store",
    "crates/agent-cli",
    "crates/app-sdk",
    "crates/pal-core",
    "crates/pal-linux",
    "crates/pal-fallback",
    "crates/pal-mock",
    "crates/pal-windows",
    "crates/pal-macos",
    "examples/payload-hello",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["cokkiy <cokkiy@outlook.com>"]

[workspace.dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std", "serde"] }
futures-util = "0.3.31"
libc = "0.2"
nix = { version = "0.31", features = ["fs", "process", "signal", "feature"] }
prost = "0.14.1"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.8"
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
tonic-prost = "0.14"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock"] }
windows-service = "0.8"

[lib]
name = "cc_rdeviceagent"

[features]
default = []
packet-capture = ["dep:pnet_datalink"]

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
thiserror = "2.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std", "serde"] }
futures-util = "0.3.31"
hostname = "0.4.1"
netstat2 = "0.11.2"
pnet_datalink = { version = "0.35.0", optional = true }
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
shlex = "2.0"
sysinfo = "0.39"
tokio = { version = "1.52", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.17"
toml = "0.9.8"
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
tonic-prost = "0.14"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.23", features = ["v4", "serde"] }

# MQTT client for telemetry publishing
rumqttc = { package = "rumqttc-v4-next", version = "0.33.2", default-features = false, features = ["use-rustls-ring"] }
serde_json = "1.0"

# SQLite for script storage
rusqlite = { version = "0.39", features = ["bundled"] }
regex = "1.11"
agent-core = { path = "crates/agent-core" }
agent-store = { path = "crates/agent-store" }
agent-telemetry = { path = "crates/agent-telemetry" }
pal-core = { path = "crates/pal-core" }
pal-fallback = { path = "crates/pal-fallback" }
ring = "0.17.14"
base16 = "0.2"
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["fs", "process", "signal", "feature"] }
pal-linux = { path = "crates/pal-linux" }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock"] }
pal-windows = { path = "crates/pal-windows" }
