[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
pal-core = { path = "../pal-core" }
ring = "0.17.14"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tonic = { workspace = true }
tower = "0.5"
tracing.workspace = true
hyper = { version = "1", features = [] }
http = "1"
x509-parser = "0.17"
uuid = { workspace = true }
