[package]
name = "agent-store"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
chrono.workspace = true
pal-core = { path = "../pal-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
