[package]
name = "payload-hello"
version = "1.0.0-beta.2"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
app_sdk = { package = "cc-rdeviceagent-app-sdk", path = "../../crates/app-sdk" }
